traversal.snake.Snake.scala.error
Compilation error:
Snake:14: error: '{' expected but 'case' found.
      case 1 => gauche();avance();gauche();d=2
      ^Snake:15: error: '}' expected but 'case' found.
      case 2 => droite();avance();droite();d=1
      ^Snake:20: error: eof expected but '}' found.
}
^